trunk/Archive2/7b/348f07c460e023/output
main.cpp: In function 'int main()':
main.cpp:23:34: error: the value of 'y' is not usable in a constant expression
     constexpr double r = square(y);
                                  ^
main.cpp:8:9: note: 'int y' is not const
     int y=20;
         ^
main.cpp:7:15: warning: unused variable 'x' [-Wunused-variable]
     const int x=10;
               ^
